--- a/website/index.html
+++ b/website/index.html
@@ -13,14 +13,14 @@
          function submitForm(oFormElement) {
              var xhr = new XMLHttpRequest();
              xhr.onload = function() {
-                 var result = parseFloat(xhr.responseText);
+                 var result = parseJSON(xhr.responseText);
                  var resultElement = document.getElementById('result');
                  // TODO: implement function code to plot results
                  
              }
              xhr.open (oFormElement.method, oFormElement.action, true);
-             var result = document.getElementById('result');
-             xhr.send (result.value);
+             var stock = document.getElementById('stock');
+             xhr.send (stock.value);
              return false;
          }
         </script>
@@ -32,15 +32,16 @@
             <h1>Stock Prediction</h1>
             <p>Select the stock you would like to predict and a start date</p>
             <form method="POST"
-                  action="https://s83fu65cll.execute-api.eu-central-1.amazonaws.com/prod"
+                  action="https://yzv5kqoun2.execute-api.eu-central-1.amazonaws.com/prod"
                   onsubmit="return submitForm(this);" > 
-                  
                 <div class="form-group">
-                    <!--
-                        #TODO: Fix the markup to display two dropdown list and a checkbox 
-                    -->
-                    <label for="review">Review:</label>
-                    <textarea class="form-control"  rows="5" id="review">Please write your review here.</textarea>
+                    <label for="stock">Choose a stock:</label>
+                    <select id="stock" class="form-control" name="stock">
+                        <option value="IBM">IBM</option>
+                        <option value="AAPL">Apple Inc.</option>
+                        <option value="AMZN">Amazon.com</option>
+                        <option value="GOOGL">Alphabet Inc.</option>
+                    </select>
                 </div>
                 <button type="submit" class="btn btn-default">Predict</button>
             </form>
